@@ -183,6 +183,9 @@ New Features
   IndexSearcher and DirectoryTaxonomyReader for near-real-time
   faceting.  (Shai Erera, Mike McCandless)
 
+* LUCENE-4915: DrillSideways now allows drilling down on fields that
+  are not faceted. (Mike McCandless)
+
 Optimizations
 
 * LUCENE-4839: SorterTemplate.merge can now be overridden in order to replace
